--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-div {
+body>div {
 	width:80%;
 	margin:auto;
 	padding-left: 5px;
@@ -10,4 +10,8 @@ div {
     background-image: url(../img/pfmono.png);
     text-indent: -9999px;
 
+}
+
+.blockcontent{
+	border: white solid;
 }
