--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,9 @@ div {
 /*****************
 *outer contents block
 ******************/
+div{
+	position:relative;
+}
 cont{
 	display:block;
 	margin: 5px;
@@ -49,7 +52,8 @@ pageback{
     /*background: -o-linear-gradient(red, yellow); /* For Opera 11.1 to 12.0 */
     /*background: -moz-linear-gradient(red, yellow); /* For Firefox 3.6 to 15 */
     /*background: linear-gradient(red, yellow); /* Standard syntax (must be last) */
-    background: linear-gradient(to bottom, #eee, rgba(222,112,6,0.2), #de7006),url(../img/background.svg);
+    background: linear-gradient(to bottom, #eee, rgba(222,112,6,0.2), #de7006),url(../img/background.svg) fixed;
+    overflow: scroll;
 }
 
 
